# core

./: Cargo.toml  Dockerfile  README.md
docs/img/src/: ExecutorCommunicationSequence.plantuml
src/: core.rs  lib.rs  main.rs
tests/: test_incoming_msg_to_executor.rs
